# code-documenter

./: Cargo.toml  README.md
docs/examples/: class-diagram.mmd  er-diagram.mmd  sequence-diagram.mmd  zenuml-diagram.mmd
src/: lib.rs  main.rs  model.rs
src/emit/: class_diagram.rs  er_diagram.rs  mod.rs  sequence.rs  zenuml.rs
src/parse/: go.rs  mod.rs  rust.rs  typescript.rs
