[package]
name = "code-documenter"
version = "0.1.0"
edition = "2021"
description = "Generate Mermaid diagrams from codebases"

[dependencies]
clap = { version = "4", features = ["derive"] }
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-go = "0.25"
tree-sitter-typescript = "0.23"
anyhow = "1"
walkdir = "2"
