[package]
name = "code-documenter"
version = "0.1.0"
edition = "2021"
description = "Generate Mermaid diagrams from codebases"

[features]
default = []
render = ["mermaid-rs-renderer", "resvg", "usvg", "tiny-skia"]

[dependencies]
clap = { version = "4", features = ["derive"] }
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-go = "0.25"
tree-sitter-typescript = "0.23"
anyhow = "1"
walkdir = "2"
mermaid-rs-renderer = { version = "0.2", optional = true }
resvg = { version = "0.44", optional = true }
usvg = { version = "0.44", optional = true }
tiny-skia = { version = "0.11", optional = true }
